// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`playback quality submenu should be structurally sound 1`] = `
<vime-settings style="bottom: 73px;">
  <!---->
  <vime-menu aria-hidden="true" aria-labelledby="" id="vime-settings-5" role="menu" tabindex="-1">
    <!---->
    <div>
      <vime-menu-item aria-hidden="false" aria-label="Playback Rate" class="notTouch" role="menuitem" tabindex="0">
        Playback Rate
        <span class="spacer"></span>
        <span class="hint">
          Normal
        </span>
      </vime-menu-item>
      <vime-submenu>
        <!---->
        <vime-menu-item aria-controls="vime-submenu-4" aria-expanded="false" aria-haspopup="true" aria-hidden="false" aria-label="Playback Quality" class="notTouch" id="vime-submenu-4-controller" role="menuitem" tabindex="0">
          Playback Quality
          <span class="spacer"></span>
          <span class="hint">
            720p
          </span>
          <span class="arrow right"></span>
        </vime-menu-item>
        <vime-menu aria-hidden="true" aria-labelledby="vime-submenu-4-controller" id="vime-submenu-4" role="menu" tabindex="-1">
          <!---->
          <div>
            <vime-menu-radio-group>
              <!---->
              <vime-menu-radio>
                <vime-menu-item aria-checked="false" aria-hidden="false" aria-label="1080p" class="notTouch" role="menuitemradio" tabindex="0">
                  <vime-icon href="#vime-checkmark"></vime-icon>
                  1080p
                  <span class="spacer"></span>
                  <span class="badge">
                    HD
                  </span>
                </vime-menu-item>
              </vime-menu-radio>
              <vime-menu-radio>
                <vime-menu-item aria-checked="true" aria-hidden="false" aria-label="720p" class="notTouch" role="menuitemradio" tabindex="0">
                  <vime-icon href="#vime-checkmark"></vime-icon>
                  720p
                </vime-menu-item>
              </vime-menu-radio>
              <vime-menu-radio>
                <vime-menu-item aria-checked="false" aria-hidden="false" aria-label="480p" class="notTouch" role="menuitemradio" tabindex="0">
                  <vime-icon href="#vime-checkmark"></vime-icon>
                  480p
                </vime-menu-item>
              </vime-menu-radio>
            </vime-menu-radio-group>
          </div>
        </vime-menu>
      </vime-submenu>
      <vime-menu-item aria-hidden="false" aria-label="Subtitles/CC" class="notTouch" role="menuitem" tabindex="0">
        Subtitles/CC
        <span class="spacer"></span>
        <span class="hint">
          None
        </span>
      </vime-menu-item>
      DefaultSlot
    </div>
  </vime-menu>
</vime-settings>
`;

exports[`playback rate submenu should be structurally sound 1`] = `
<vime-settings style="bottom: 73px;">
  <!---->
  <vime-menu aria-hidden="true" aria-labelledby="" id="vime-settings-2" role="menu" tabindex="-1">
    <!---->
    <div>
      <vime-submenu>
        <!---->
        <vime-menu-item aria-controls="vime-submenu-1" aria-expanded="false" aria-haspopup="true" aria-hidden="false" aria-label="Playback Rate" class="notTouch" id="vime-submenu-1-controller" role="menuitem" tabindex="0">
          Playback Rate
          <span class="spacer"></span>
          <span class="hint">
            Normal
          </span>
          <span class="arrow right"></span>
        </vime-menu-item>
        <vime-menu aria-hidden="true" aria-labelledby="vime-submenu-1-controller" id="vime-submenu-1" role="menu" tabindex="-1">
          <!---->
          <div>
            <vime-menu-radio-group>
              <!---->
              <vime-menu-radio>
                <vime-menu-item aria-checked="true" aria-hidden="false" aria-label="Normal" class="notTouch" role="menuitemradio" tabindex="0">
                  <vime-icon href="#vime-checkmark"></vime-icon>
                  Normal
                </vime-menu-item>
              </vime-menu-radio>
              <vime-menu-radio>
                <vime-menu-item aria-checked="false" aria-hidden="false" aria-label="2" class="notTouch" role="menuitemradio" tabindex="0">
                  <vime-icon href="#vime-checkmark"></vime-icon>
                  2
                </vime-menu-item>
              </vime-menu-radio>
              <vime-menu-radio>
                <vime-menu-item aria-checked="false" aria-hidden="false" aria-label="3" class="notTouch" role="menuitemradio" tabindex="0">
                  <vime-icon href="#vime-checkmark"></vime-icon>
                  3
                </vime-menu-item>
              </vime-menu-radio>
            </vime-menu-radio-group>
          </div>
        </vime-menu>
      </vime-submenu>
      <vime-menu-item aria-hidden="false" aria-label="Playback Quality" class="notTouch" role="menuitem" tabindex="0">
        Playback Quality
        <span class="spacer"></span>
        <span class="hint">
          Auto
        </span>
      </vime-menu-item>
      <vime-menu-item aria-hidden="false" aria-label="Subtitles/CC" class="notTouch" role="menuitem" tabindex="0">
        Subtitles/CC
        <span class="spacer"></span>
        <span class="hint">
          None
        </span>
      </vime-menu-item>
      DefaultSlot
    </div>
  </vime-menu>
</vime-settings>
`;

exports[`should be structurally sound 1`] = `
<vime-player aria-hidden="true" aria-label="Video Player" id="vime-player-1" tabindex="0">
  <!---->
  <div class="active skeleton"></div>
  <vime-faketube></vime-faketube>
  <vime-ui>
    <!---->
    <vime-default-settings>
      <!---->
      <vime-settings style="bottom: 73px;">
        <!---->
        <vime-menu aria-hidden="true" aria-labelledby="" id="vime-settings-1" role="menu" tabindex="-1">
          <!---->
          <div>
            <vime-menu-item aria-hidden="false" aria-label="Playback Rate" class="notTouch" role="menuitem" tabindex="0">
              Playback Rate
              <span class="spacer"></span>
              <span class="hint">
                Normal
              </span>
            </vime-menu-item>
            <vime-menu-item aria-hidden="false" aria-label="Playback Quality" class="notTouch" role="menuitem" tabindex="0">
              Playback Quality
              <span class="spacer"></span>
              <span class="hint">
                Auto
              </span>
            </vime-menu-item>
            <vime-menu-item aria-hidden="false" aria-label="Subtitles/CC" class="notTouch" role="menuitem" tabindex="0">
              Subtitles/CC
              <span class="spacer"></span>
              <span class="hint">
                None
              </span>
            </vime-menu-item>
            DefaultSlot
          </div>
        </vime-menu>
      </vime-settings>
    </vime-default-settings>
  </vime-ui>
</vime-player>
`;
